# chatbotWithAdmin

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  takshashila-chatbot-requirement.md
.claude/: launch.json
.claude/agents/: code-quality-reviewer.md  git-hygiene-checker.md  standards-checker.md  tdd-validator.md
.claude/commands/: review.md
admin/: index.html  package-lock.json  package.json  vitest.config.ts
admin/src/: api.ts  app.ts  main.ts  render.ts
admin/tests/: api.test.ts  app.test.ts  render.test.ts
data/: admissions.db
db/: schema.sql
docker/postgres/: init.sql
docs/: system-design.md  test-strategy.md
load/: README.md  chat_load.js
src/takshashila_chatbot/: __init__.py  config.py  wiring.py  worker.py
tests/integration/: conftest.py  test_adapter_embeddings.py  test_adapter_pg_content.py  test_adapter_pg_dead_end_clusters.py  test_adapter_pg_leads.py  test_adapter_pg_outbox.py  test_adapter_pg_question_log.py  test_adapter_pgvector.py  test_adapter_redis_session.py  test_adapter_vllm.py  test_admin_auth.py  test_answer_service.py  test_answer_stream.py  test_api_admin.py  test_api_chat.py  test_api_chat_features.py  test_api_content.py  test_api_health.py  test_api_leads.py  test_api_main.py  test_connection_executor.py  test_content_service.py  test_dashboard_service.py  test_db_roundtrip.py  test_dead_end_clustering.py  test_ingest_admissions.py  test_lead_delivery.py  (+4 more)
widget/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
(+83 files in other folders)
