[project]
name = "takshashila-chatbot"
version = "0.1.0"
description = "Takshashila University grounded chatbot widget — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
redis = [
    "redis>=5",
]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
markers = [
    "unit: pure deterministic domain logic, no I/O",
    "integration: requires DB or service fakes",
]

[tool.coverage.run]
source = ["takshashila_chatbot"]
branch = true

[tool.coverage.report]
exclude_also = [
    "\\.\\.\\.",          # Protocol method stubs
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
